--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 EMAIL_USER=techwin363@gmail.com
 EMAIL_PASS=cveu wdtm tkqu hrfs
 MONGO_URL=mongodb+srv://kawaltechwinlabs:tCQGIFJbe2BxtZxp@cluster0.sox6qxf.mongodb.net/revel
-JWT_SECRET_KEY="jhasgdfjhkaghsdjfjha"
+JWT_SECRET_KEY="jwtSecretKeykeykeykeykey"
 FRONTEND_URL= http://localhost:2001
 GEMINI_API_KEY=AIzaSyBAIv09MgTmH9dbIqYXSj6yTwFKMlJuPH8
