--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "watch": "tsc --watch",
     "pre:dev": "nodemon dist/server.js",
     "dev": "concurrently \"npm run watch\" \"npm run pre:dev\"",
-    "start": "npm run build && node dist/server.js"
+    "start": "npm run build && node dist/server.js",
+    "copy-templates": "copyfiles -u 3 \"src/**/*.hbs\" dist"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
   "description": "",
   "dependencies": {
     "@cfworker/json-schema": "^4.1.1",
+    "@google-cloud/vertexai": "^1.10.0",
     "@google/genai": "^1.32.0",
     "@modelcontextprotocol/sdk": "^1.24.3",
     "bcrypt": "^6.0.0",
@@ -25,12 +27,17 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-useragent": "^2.0.2",
+    "fs-extra": "^11.3.3",
     "googleapis": "^169.0.0",
+    "handlebars": "^4.7.8",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.20.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
     "nodemon": "^3.1.11",
+    "puppeteer": "^24.34.0",
     "randomstring": "^1.3.1"
   },
   "devDependencies": {
@@ -40,6 +47,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
     "@types/nodemailer": "^7.0.4",
+    "copyfiles": "^2.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
