--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@google-cloud/vertexai": "^1.10.0",
     "@google/genai": "^1.32.0",
     "@modelcontextprotocol/sdk": "^1.24.3",
+    "archiver": "^7.0.1",
     "bcrypt": "^6.0.0",
     "concurrently": "^9.2.1",
     "cors": "^2.8.5",
@@ -41,6 +42,7 @@
     "randomstring": "^1.3.1"
   },
   "devDependencies": {
+    "@types/archiver": "^7.0.0",
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
